--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,23 @@
 language: ruby
+
 rvm:
   - 2.0.0
   - 2.1.8
   - 2.2.4
   - 2.3.0
+
+gemfile:
+  - gemfiles/rails_32.gemfile
+  - gemfiles/rails_40.gemfile
+  - gemfiles/rails_41.gemfile
+  - gemfiles/rails_42.gemfile
+  - gemfiles/rails_edge.gemfile
+
+sudo: false
+
+matrix:
+  exclude:
+    - rvm: 2.0.0
+      gemfile: gemfiles/rails_edge.gemfile
+    - rvm: 2.1.8
+      gemfile: gemfiles/rails_edge.gemfile
