--- a/.gitignore
+++ b/.gitignore
@@ -12,10 +12,10 @@ doc/
 lib/bundler/man
 pkg
 rdoc
-spec/reports
+test/reports
 test/tmp
 test/version_tmp
 tmp
 log
-spec/*.sqlite3
-spec/db/*.sqlite3
+test/*.sqlite3
+test/db/*.sqlite3
