--- a/test/config/database.yml
+++ b/test/config/database.yml
@@ -10,6 +10,20 @@ sqlite3_2: &sqlite3_2
   pool: 5
   timeout: 5000
 
+mysql: &mysql
+  adapter: mysql2
+  host: localhost
+  username: root
+  password:
+  database: test
+
+mysql_2: &mysql_2
+  adapter: mysql2
+  host: localhost
+  username: root
+  password:
+  database: test2
+
 test:
   <<: *<%= ENV['DB'] %>
 
