--- a/test/config/database.yml
+++ b/test/config/database.yml
@@ -1,12 +1,12 @@
 sqlite3: &sqlite3
   adapter: sqlite3
-  database: test.sqlite3
+  database: database_rewinder_test.sqlite3
   pool: 5
   timeout: 5000
 
 sqlite3_2: &sqlite3_2
   adapter: sqlite3
-  database: test2.sqlite3
+  database: database_rewinder_test2.sqlite3
   pool: 5
   timeout: 5000
 
@@ -15,14 +15,14 @@ mysql: &mysql
   host: localhost
   username: root
   password:
-  database: test
+  database: database_rewinder_test
 
 mysql_2: &mysql_2
   adapter: mysql2
   host: localhost
   username: root
   password:
-  database: test2
+  database: database_rewinder_test2
 
 test:
   <<: *<%= ENV['DB'] %>
