--- a/test/config/database.yml
+++ b/test/config/database.yml
@@ -24,6 +24,20 @@ mysql_2: &mysql_2
   password:
   database: database_rewinder_test2
 
+postgresql: &postgresql
+  adapter: postgresql
+  host: localhost
+  username: postgres
+  password:
+  database: database_rewinder_test
+
+postgresql_2: &postgresql_2
+  adapter: postgresql
+  host: localhost
+  username: postgres
+  password:
+  database: database_rewinder_test2
+
 test:
   <<: *<%= ENV['DB'] %>
 
