--- a/.travis.yml
+++ b/.travis.yml
@@ -12,6 +12,7 @@ rvm:
   - 2.1.10
   - 2.2.6
   - 2.3.3
+  - 2.4.0
 
 gemfile:
   - gemfiles/rails_40.gemfile
@@ -32,3 +33,9 @@ matrix:
       gemfile: gemfiles/rails_50.gemfile
     - rvm: 2.1.10
       gemfile: gemfiles/rails_50.gemfile
+    - rvm: 2.4.0
+      gemfile: gemfiles/rails_40.gemfile
+    - rvm: 2.4.0
+      gemfile: gemfiles/rails_41.gemfile
+    - rvm: 2.4.0
+      gemfile: gemfiles/rails_42.gemfile
