--- a/.travis.yml
+++ b/.travis.yml
@@ -19,6 +19,7 @@ gemfile:
   - gemfiles/rails_41.gemfile
   - gemfiles/rails_42.gemfile
   - gemfiles/rails_50.gemfile
+  - gemfiles/rails_51.gemfile
   - gemfiles/rails_edge.gemfile
 
 sudo: false
