--- a/.travis.yml
+++ b/.travis.yml
@@ -31,7 +31,11 @@ matrix:
     - rvm: 2.1.10
       gemfile: gemfiles/rails_edge.gemfile
     - rvm: 2.0.0
+      gemfile: gemfiles/rails_51.gemfile
+    - rvm: 2.0.0
       gemfile: gemfiles/rails_50.gemfile
+    - rvm: 2.1.10
+      gemfile: gemfiles/rails_51.gemfile
     - rvm: 2.1.10
       gemfile: gemfiles/rails_50.gemfile
     - rvm: 2.4.0
