--- a/.travis.yml
+++ b/.travis.yml
@@ -15,7 +15,6 @@ rvm:
   - 2.4.0
 
 gemfile:
-  - gemfiles/rails_41.gemfile
   - gemfiles/rails_42.gemfile
   - gemfiles/rails_50.gemfile
   - gemfiles/rails_51.gemfile
@@ -37,9 +36,10 @@ matrix:
       gemfile: gemfiles/rails_51.gemfile
     - rvm: 2.1.10
       gemfile: gemfiles/rails_50.gemfile
-    - rvm: 2.4.0
-      gemfile: gemfiles/rails_41.gemfile
   include:
+    - rvm: 2.3.3
+      gemfile: gemfiles/rails_41.gemfile
+      env: DB=sqlite3
     - rvm: 2.3.3
       gemfile: gemfiles/rails_40.gemfile
       env: DB=sqlite3
