CI against rails 5.2

--- a/.travis.yml
+++ b/.travis.yml
@@ -18,6 +18,7 @@ rvm:
   - 2.2.9
 
 gemfile:
+  - gemfiles/rails_52.gemfile
   - gemfiles/rails_51.gemfile
   - gemfiles/rails_50.gemfile
   - gemfiles/rails_42.gemfile
