rails_edge may fail

--- a/.travis.yml
+++ b/.travis.yml
@@ -40,3 +40,6 @@ matrix:
     - rvm: 2.0.0
       gemfile: gemfiles/rails_42.gemfile
       env: DB=sqlite3
+
+  allow_failures:
+    - gemfile: gemfiles/rails_edge.gemfile
