--- a/.travis.yml
+++ b/.travis.yml
@@ -22,12 +22,14 @@ gemfile:
   - gemfiles/rails_51.gemfile
   - gemfiles/rails_50.gemfile
   - gemfiles/rails_42.gemfile
-  - gemfiles/rails_edge.gemfile
 
 sudo: false
 
 matrix:
   include:
+    - rvm: 2.5.0
+      gemfile: gemfiles/rails_edge.gemfile
+      env: DB=sqlite3
     - rvm: 2.3.6
       gemfile: gemfiles/rails_41.gemfile
       env: DB=sqlite3
