--- a/.travis.yml
+++ b/.travis.yml
@@ -12,6 +12,7 @@ env:
   - DB=postgresql
 
 rvm:
+  - 2.6.0
   - 2.5.3
   - 2.4.5
   - 2.3.8
@@ -27,7 +28,7 @@ sudo: false
 
 matrix:
   include:
-    - rvm: 2.5.3
+    - rvm: 2.6.0
       gemfile: gemfiles/rails_edge.gemfile
       env: DB=sqlite3
     - rvm: 2.3.8
@@ -42,6 +43,9 @@ matrix:
     - rvm: 2.0.0
       gemfile: gemfiles/rails_42.gemfile
       env: DB=sqlite3
+  exclude:
+    - rvm: 2.6.0
+      gemfile: gemfiles/rails_42.gemfile
 
   allow_failures:
     - gemfile: gemfiles/rails_edge.gemfile
