--- a/.travis.yml
+++ b/.travis.yml
@@ -13,13 +13,9 @@ env:
 
 rvm:
   - 2.6.3
-  - 2.5.5
-  - 2.4.6
 
 gemfile:
   - gemfiles/rails_52.gemfile
-  - gemfiles/rails_51.gemfile
-  - gemfiles/rails_50.gemfile
 
 sudo: false
 
@@ -27,6 +23,12 @@ matrix:
   include:
     - rvm: 2.6.3
       gemfile: gemfiles/rails_edge.gemfile
+      env: DB=sqlite3
+    - rvm: 2.5.5
+      gemfile: gemfiles/rails_51.gemfile
+      env: DB=sqlite3
+    - rvm: 2.4.6
+      gemfile: gemfiles/rails_50.gemfile
       env: DB=sqlite3
     - rvm: 2.3.8
       gemfile: gemfiles/rails_41.gemfile
