--- a/.travis.yml
+++ b/.travis.yml
@@ -2,6 +2,12 @@ language: ruby
 
 addons:
   postgresql: '9.4'
+  apt:
+    sources:
+      - mysql-5.7-trusty
+    packages:
+      - mysql-server
+      - mysql-client
 
 before_install:
   - gem i rubygems-update -v '<3' && update_rubygems
