--- a/.travis.yml
+++ b/.travis.yml
@@ -18,7 +18,7 @@ env:
   - DB=postgresql
 
 rvm:
-  - 2.6.3
+  - 2.7.1
 
 gemfile:
   - gemfiles/rails_52.gemfile
@@ -32,6 +32,12 @@ matrix:
   include:
     - rvm: 2.6.3
       gemfile: gemfiles/rails_edge.gemfile
+      env: DB=postgresql
+    - rvm: 2.6.3
+      gemfile: gemfiles/rails_60.gemfile
+      env: DB=postgresql
+    - rvm: 2.6.3
+      gemfile: gemfiles/rails_52.gemfile
       env: DB=postgresql
     - rvm: 2.5.5
       gemfile: gemfiles/rails_51.gemfile
