--- a/.travis.yml
+++ b/.travis.yml
@@ -33,8 +33,11 @@ dist: xenial
 
 matrix:
   include:
-    - rvm: 2.6.7
+    - rvm: 3.0.1
       gemfile: gemfiles/rails_edge.gemfile
+      env: DB=postgresql
+    - rvm: 3.0.1
+      gemfile: gemfiles/rails_61.gemfile
       env: DB=postgresql
     - rvm: 2.6.7
       gemfile: gemfiles/rails_60.gemfile
