--- a/.travis.yml
+++ b/.travis.yml
@@ -37,8 +37,20 @@ matrix:
       gemfile: gemfiles/rails_edge.gemfile
       env: DB=postgresql
     - rvm: 3.0.1
+      gemfile: gemfiles/rails_edge.gemfile
+      env: DB=mysql
+    - rvm: 3.0.1
+      gemfile: gemfiles/rails_edge.gemfile
+      env: DB=sqlite3
+    - rvm: 3.0.1
       gemfile: gemfiles/rails_61.gemfile
       env: DB=postgresql
+    - rvm: 3.0.1
+      gemfile: gemfiles/rails_61.gemfile
+      env: DB=mysql
+    - rvm: 3.0.1
+      gemfile: gemfiles/rails_61.gemfile
+      env: DB=sqlite3
     - rvm: 2.6.7
       gemfile: gemfiles/rails_60.gemfile
       env: DB=postgresql
