--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -112,6 +112,7 @@ jobs:
           - ruby_version: '2.3'
             gemfile: gemfiles/rails_52.gemfile
             db: mysql
+            allow_failures: 'true'
           - ruby_version: '2.2'
             gemfile: gemfiles/rails_52.gemfile
             db: sqlite3
@@ -121,6 +122,7 @@ jobs:
           - ruby_version: '2.2'
             gemfile: gemfiles/rails_52.gemfile
             db: mysql
+            allow_failures: 'true'
 
           - ruby_version: '2.2'
             gemfile: gemfiles/rails_42.gemfile
@@ -131,6 +133,7 @@ jobs:
           - ruby_version: '2.2'
             gemfile: gemfiles/rails_42.gemfile
             db: mysql
+            allow_failures: 'true'
           - ruby_version: '2.1'
             gemfile: gemfiles/rails_42.gemfile
             db: sqlite3
@@ -140,6 +143,7 @@ jobs:
           - ruby_version: '2.1'
             gemfile: gemfiles/rails_42.gemfile
             db: mysql
+            allow_failures: 'true'
 
     runs-on: ubuntu-18.04
 
