Rails 6.1 doesn't support Ruby 3.1

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -47,6 +47,9 @@ jobs:
           - gemfile: gemfiles/rails_70.gemfile
             ruby_version: '2.6'
 
+          - gemfile: gemfiles/rails_61.gemfile
+            ruby_version: ruby-head
+
           - gemfile: gemfiles/rails_60.gemfile
             ruby_version: ruby-head
           - gemfile: gemfiles/rails_60.gemfile
