--- a/test/config/database.yml
+++ b/test/config/database.yml
@@ -28,18 +28,25 @@ test2:
   database: database_rewinder_test2
 
 <% when 'postgresql' %>
-test:
+superuser_connection:
   adapter: postgresql
   host: localhost
   # this user has to be a superuser for the tests to pass
   username: postgres
+  password: postgres
+  database: postgres
+
+test:
+  adapter: postgresql
+  host: localhost
+  username: database_rewinder_user
   password: postgres
   database: database_rewinder_test
 
 test2:
   adapter: postgresql
   host: localhost
-  username: postgres
+  username: postgres_user
   password: postgres
   database: database_rewinder_test2
 <% end %>
