--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -28,7 +28,7 @@ jobs:
       matrix:
         db: [sqlite3, postgresql, mysql]
         ruby_version: [ruby-head, '3.0', '2.7', '2.6']
-        rails_version: [edge, '7.0', '6.1', '6.0', '5.2']
+        rails_version: [edge, '7.0', '6.1', '6.0']
 
         exclude:
           - ruby_version: '2.6'
@@ -45,12 +45,16 @@ jobs:
           - ruby_version: '3.0'
             rails_version: '6.0'
 
-          - ruby_version: ruby-head
-            rails_version: '5.2'
-          - ruby_version: '3.0'
-            rails_version: '5.2'
-
         include:
+          - ruby_version: '2.7'
+            rails_version: '5.2'
+            db: sqlite3
+          - ruby_version: '2.7'
+            rails_version: '5.2'
+            db: postgresql
+          - ruby_version: '2.7'
+            rails_version: '5.2'
+            db: mysql
           - ruby_version: '2.4'
             rails_version: '5.2'
             db: sqlite3
