--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -28,7 +28,7 @@ jobs:
       matrix:
         db: [sqlite3, postgresql, mysql]
         ruby_version: [ruby-head, '3.2', '3.1', '3.0', '2.7', '2.6']
-        rails_version: [edge '7.1', '7.0', '6.1']
+        rails_version: [edge, '7.1', '7.0', '6.1']
 
         exclude:
           - ruby_version: '2.6'
