--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -27,7 +27,7 @@ jobs:
 
       matrix:
         db: [sqlite3, postgresql, mysql]
-        ruby_version: [ruby-head, '3.3', '3.2', '3.1', '3.0']
+        ruby_version: [ruby-head, '3.3', '3.2', '3.1']
         rails_version: [edge, '7.1', '7.0', '6.1']
 
         exclude:
@@ -35,6 +35,16 @@ jobs:
             rails_version: '6.1'
 
         include:
+          - ruby_version: '3.0'
+            rails_version: '7.1'
+            db: sqlite3
+          - ruby_version: '3.0'
+            rails_version: '7.1'
+            db: postgresql
+          - ruby_version: '3.0'
+            rails_version: '7.1'
+            db: mysql
+
           - ruby_version: '2.7'
             rails_version: '7.1'
             db: sqlite3
@@ -53,6 +63,16 @@ jobs:
             db: postgresql
           - ruby_version: '2.7'
             rails_version: '7.0'
+            db: mysql
+
+          - ruby_version: '3.0'
+            rails_version: '6.1'
+            db: sqlite3
+          - ruby_version: '3.0'
+            rails_version: '6.1'
+            db: postgresql
+          - ruby_version: '3.0'
+            rails_version: '6.1'
             db: mysql
 
           - ruby_version: '2.6'
