--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -33,6 +33,10 @@ jobs:
         exclude:
           - ruby_version: ruby-head
             rails_version: '6.1'
+
+          - ruby_version: '3.1'
+            rails_version: '8.0'
+
           - rails_version: '7.0'
             db: trilogy
           - rails_version: '6.1'
