--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -35,6 +35,8 @@ jobs:
             rails_version: '6.1'
 
           - ruby_version: '3.1'
+            rails_version: edge
+          - ruby_version: '3.1'
             rails_version: '8.0'
 
           - rails_version: '7.0'
